fix bargraph spillover bug

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -146,6 +146,7 @@ button {
 
 svg.barGraph {
   width: 100%;
+  overflow:visible;
 }
 
 /* =========================================== */
